force-app/main/default/objects/Account/fields/Airport_Details__c.field-meta.xml
<CustomField>
    <fullName>Airport_Details__c</fullName>
    <label>Airport Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>