force-app/main/default/objects/Account/fields/AVSFQB__Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__Credit_Limit__c</fullName>
    <label>Credit Limit</label>
    <length>41</length>
    <type>Text</type>
</CustomField>