force-app/main/default/objects/Account/fields/AVSFQB__First_Name__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__First_Name__c</fullName>
    <label>First Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>