force-app/main/default/objects/Account/fields/AVSFQB__Integration__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__Integration__c</fullName>
    <description>Change to Request Sync to Update in QuickBooks Online</description>
    <inlineHelpText>Change to Request Sync to Update in QuickBooks Online</inlineHelpText>
    <label>Integration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Request Sync</fullName>
            </value>
            <value>
                <fullName>In Sync</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>