force-app/main/default/objects/Account/fields/AVSFQB__Last_Name__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__Last_Name__c</fullName>
    <label>Last Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>