force-app/main/default/objects/Account/fields/AVSFQB__Open_Balance__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__Open_Balance__c</fullName>
    <label>QuickBooks Open Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>