force-app/main/default/objects/Account/fields/AVSFQB__QuickBooks_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__QuickBooks_Customer_Type__c</fullName>
    <label>QuickBooks Customer Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>