force-app/main/default/objects/Account/fields/AVSFQB__Quickbooks_Id__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__Quickbooks_Id__c</fullName>
    <externalId>true</externalId>
    <label>QuickBooks Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>