force-app/main/default/objects/Account/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <label>Comment</label>
    <length>225</length>
    <type>Text</type>
</CustomField>