force-app/main/default/objects/Account/fields/Guest__c.field-meta.xml
<CustomField>
    <fullName>Guest__c</fullName>
    <label>Guest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>