force-app/main/default/objects/Account/fields/Hotel_Address__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Address__c</fullName>
    <label>Hotel Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>