force-app/main/default/objects/Account/fields/Hotel_Name__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Name__c</fullName>
    <displayFormat>Hotel-{00000}</displayFormat>
    <label>Hotel Name</label>
    <type>AutoNumber</type>
</CustomField>