force-app/main/default/objects/Account/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The Hay-Adams – Washington, D.C.</fullName>
            </value>
            <value>
                <fullName>Montage Deer Valley – Park City, Utah</fullName>
            </value>
            <value>
                <fullName>Rancho Valencia Resort &amp; Spa – Rancho Santa Fe, California</fullName>
            </value>
            <value>
                <fullName>Primland – Meadows of Dan, Virginia</fullName>
            </value>
            <value>
                <fullName>The Peninsula Beverly Hills – Beverly Hills, California</fullName>
            </value>
            <value>
                <fullName>Mandarin Oriental – Las Vegas</fullName>
            </value>
            <value>
                <fullName>Four Seasons Resort Lanai – Lanai City, Hawaii</fullName>
            </value>
            <value>
                <fullName>The Peninsula – Chicago</fullName>
            </value>
            <value>
                <fullName>The Greenwich Hotel – New York City</fullName>
            </value>
            <value>
                <fullName>Four Seasons Resort Maui at Wailea – Wailea, Hawaii</fullName>
            </value>
            <value>
                <fullName>Wentworth Mansion – Charleston, South Carolina</fullName>
            </value>
            <value>
                <fullName>Four Seasons Hotel Chicago – Chicago</fullName>
            </value>
            <value>
                <fullName>The Lowell New York – New York City</fullName>
            </value>
            <value>
                <fullName>Waldorf Astoria Chicago – Chicago</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>