force-app/main/default/objects/Account/fields/Night__c.field-meta.xml
<CustomField>
    <fullName>Night__c</fullName>
    <label>Night</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>