force-app/main/default/objects/Account/validationRules/AVSFQB__Customer_Billing_City.validationRule-meta.xml
<ValidationRule>
    <fullName>AVSFQB__Customer_Billing_City</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISNULL($User.AVSFQB__DBSync_Id__c) ,IF(LEN( BillingCity ) &gt; 31,true,false),IF(LEN( BillingCity ) &gt; 255,true,false))</errorConditionFormula>
    <errorMessage>Length of Billing City is too long, please rectify it. (QB Desktop: 31 Chars, QB Online: 255 Chars)</errorMessage>
</ValidationRule>