force-app/main/default/objects/Account/validationRules/AVSFQB__Customer_Billing_State.validationRule-meta.xml
<ValidationRule>
    <fullName>AVSFQB__Customer_Billing_State</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISNULL($User.AVSFQB__DBSync_Id__c) ,IF(LEN( BillingState ) &gt; 21,true,false),IF(LEN( BillingState ) &gt; 255,true,false))</errorConditionFormula>
    <errorMessage>Length of Billing State is too long, please rectify it. (QB Desktop: 21 Chars, QB Online: 255 Chars)</errorMessage>
</ValidationRule>