force-app/main/default/objects/Account/validationRules/AVSFQB__Customer_Billing_Street.validationRule-meta.xml
<ValidationRule>
    <fullName>AVSFQB__Customer_Billing_Street</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISNULL($User.AVSFQB__DBSync_Id__c) ,IF(LEN( BillingStreet ) &gt; 41,true,false),IF(LEN( BillingStreet ) &gt; 500,true,false))</errorConditionFormula>
    <errorMessage>Length of Billing Street is too long, please rectify it. (QB Desktop: 41 Chars, QB Online: 500 Chars)</errorMessage>
</ValidationRule>