force-app/main/default/objects/Account/validationRules/AVSFQB__Customer_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>AVSFQB__Customer_Name</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISNULL($User.AVSFQB__DBSync_Id__c) ,IF(LEN( Name ) &gt; 41,true,false),IF(LEN( Name ) &gt; 100,true,false))</errorConditionFormula>
    <errorMessage>Length of Customer Name is too long, please rectify it. (QB Desktop: 41 Chars, QB Online: 100 Chars)</errorMessage>
</ValidationRule>