force-app/main/default/objects/Account/validationRules/AVSFQB__Customer_Phone_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>AVSFQB__Customer_Phone_Number</fullName>
    <active>true</active>
    <errorConditionFormula>IF( LEN( Phone ) &gt; 21, true, false)</errorConditionFormula>
    <errorMessage>Length of Customer Phone Number is too long, please rectify it. (QB Maximum Limit is 21 Chars)</errorMessage>
</ValidationRule>