force-app/main/default/objects/Account/listViews/All_Hotels.listView-meta.xml
<ListView>
    <fullName>All_Hotels</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Hotel</value>
    </filters>
    <label>All Hotels</label>
</ListView>